# fastcore

./: .gitignore  CHANGELOG.md  README.md  old_README.md  pyproject.toml
core/config/: __init__.py  app.py  base.py
examples/: apikey_example.py  app_factory_middleware_example.py  auth_example.py  cache_example.py  factory_middleware_example.py  main.py  monitoring_example.py
fastcore/: __init__.py  app_factory.py
fastcore/api/: __init__.py  filtering.py  pagination.py  sorting.py
fastcore/cache/: README.md  __init__.py  backends.py  base.py  decorator.py  decorators.py  manager.py
fastcore/config/: .env.example  README.md  __init__.py  app.py  base.py  production.py  testing.py
fastcore/db/: README.md  __init__.py  base.py  engine.py  manager.py  repository.py  session.py
fastcore/errors/: README.md  __init__.py  exceptions.py  handlers.py  manager.py
fastcore/factory/: README.md  __init__.py  app.py
fastcore/logging/: README.md  __init__.py  formatters.py  logger.py  manager.py
fastcore/middleware/: README.md  __init__.py  cors.py  i18n.py  manager.py  rate_limiting.py  trusted_hosts.py
fastcore/models/: __init__.py  security.py
fastcore/monitoring/: README.md  __init__.py  health.py  manager.py  metrics.py
fastcore/schemas/: README.md  __init__.py  metadata.py
fastcore/security/: README.md  __init__.py  apikey.py  auth.py  dependencies.py  exceptions.py  manager.py  models.py  password.py  permissions.py  repositories.py  tokens.py  users.py
fastcore_v2/config/: README.md  __init__.py  base.py  development.py  settings.py
fastcore_v2/errors/: __init__.py  manager.py
fastcore_v2/logging/: README.md  __init__.py  logger.py  manager.py
fastcore_v2/schemas/: README.md  __init__.py  metadata.py
old_examples/: apikey_example.py  middleware_example.py  monitoring_example.py
old_fastcore/: __init__.py  factory.py
old_fastcore/api/: __init__.py  pagination.py  responses.py
old_fastcore/cache/: __init__.py
old_fastcore/config/: base.py
old_fastcore/db/: __init__.py  session.py
old_fastcore/errors/: __init__.py  exceptions.py  handlers.py
old_fastcore/logging/: __init__.py  formatters.py  handlers.py
old_fastcore/middleware/: manager.py  timing.py
old_fastcore/monitoring/: __init__.py  instrumentation.py
old_fastcore/security/: apikey.py  auth.py  dependencies.py
old_tests/: conftest.py  test_factory.py
old_tests/cache/: test_backends.py  test_decorator.py
old_tests/db/: test_repository.py  test_session.py
old_tests/errors/: test_exceptions.py
old_tests/logging/: test_logger.py  test_logging_handlers.py
old_tests/middleware/: test_cors.py  test_i18n.py  test_rate_limiting.py  test_timing.py  test_trusted_hosts.py
old_tests/monitoring/: test_instrumentation.py
old_tests/security/: test_apikey.py  test_auth.py  test_dependencies.py  test_permissions.py
src/: __init__.py
src/cache/: README.md  __init__.py  backends.py  decorators.py  manager.py
src/config/: README.md  (+3 more)
tests/: conftest.py  test_app_factory.py
(+96 files in other folders)
